Backport the new version of the IT, which is isolated from other uses of rest during tests.