@@ -33,20 +33,25 @@ import com.akiban.server.test.it.ITBase;
 import com.akiban.sql.embedded.EmbeddedJDBCService;
 import com.akiban.sql.embedded.EmbeddedJDBCServiceImpl;
 
+import org.apache.http.HttpResponse;
+import org.apache.http.HttpStatus;
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.DefaultHttpClient;
+import org.apache.http.util.EntityUtils;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import static org.junit.Assert.*;
 
 import java.io.IOException;
-import java.net.Authenticator;
-import java.net.PasswordAuthentication;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.sql.Connection;
 import java.sql.DriverManager;
+import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.Statement;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
@@ -73,27 +78,22 @@ public class SecurityServiceIT extends ITBase
         return serviceManager().getServiceByClass(SecurityService.class);
     }
 
-    protected String authUser, authPass;
-
     @Before
     public void setUp() {
+        int t1 = createTable("user1", "utable", "id int primary key not null");
+        int t2 = createTable("user2", "utable", "id int primary key not null");        
+        writeRow(t1, 1L);
+        writeRow(t2, 2L);
+        
         SecurityService securityService = securityService();
         securityService.addRole("rest-user");
         securityService.addRole("admin");
         securityService.addUser("user1", "password", Arrays.asList("rest-user"));
-        Authenticator.setDefault(new Authenticator() {
-                @Override
-                protected PasswordAuthentication getPasswordAuthentication() {
-                    if (authUser == null) return null;
-                    return new PasswordAuthentication(authUser, authPass.toCharArray());
-                }
-            });
     }
 
     @After
     public void cleanUp() {
         securityService().clearAll();
-        Authenticator.setDefault(null);
     }
 
     @Test
@@ -110,69 +110,78 @@ public class SecurityServiceIT extends ITBase
         assertEquals("user1", securityService().authenticate(session(), "user1", "password").getName());
     }
 
-    private void openRestURL() throws Exception {
+    private int openRestURL(String request, String userInfo)
+            throws Exception {
         int port = serviceManager().getServiceByClass(com.akiban.http.HttpConductor.class).getPort();
         String context = serviceManager().getServiceByClass(com.akiban.rest.RestService.class).getContextPath();
-        String request = "/security_schema.roles/1";
-        URL url = new URL("http", "localhost", port, context + request);
-        url.openConnection().getInputStream().close();
+        URI uri = new URI("http", userInfo, "localhost", port, context + request, null, null);
+        HttpGet get = new HttpGet(uri);
+        HttpClient client = new DefaultHttpClient();
+        HttpResponse response = client.execute(get);
+        int code = response.getStatusLine().getStatusCode();
+        EntityUtils.consume(response.getEntity());
+        client.getConnectionManager().shutdown();
+        return code;
     }
 
-    @Test(expected = IOException.class)
+    @Test
     public void restUnauthenticated() throws Exception {
-        openRestURL();
+        assertEquals(HttpStatus.SC_UNAUTHORIZED,
+                     openRestURL("/user1.utable/1", null));
     }
 
     @Test
     public void restAuthenticated() throws Exception {
-        authUser = "user1";
-        authPass = "password";
-
-        openRestURL();
+        assertEquals(HttpStatus.SC_OK,
+                     openRestURL("/user1.utable/1", "user1:password"));
     }
 
     @Test
     public void restAuthenticateBadUser() throws Exception {
-        authUser = "user2";
-        authPass = "none";
-
-        openRestURL();
+        assertEquals(HttpStatus.SC_UNAUTHORIZED,
+                     openRestURL("/user1.utable/1", "user2:none"));
     }
 
     @Test
     public void restAuthenticateBadPassword() throws Exception {
-        authUser = "user1";
-        authPass = "wrong";
-
-        openRestURL();
+        assertEquals(HttpStatus.SC_UNAUTHORIZED,
+                     openRestURL("/user1.utable/1", "user1:wrong"));
     }
 
-    private void openPostgresConnection(String user, String password) throws Exception {
+    private Connection openPostgresConnection(String user, String password) 
+            throws Exception {
         int port = serviceManager().getServiceByClass(com.akiban.sql.pg.PostgresService.class).getPort();
         Class.forName("org.postgresql.Driver");
-        String url = String.format("jdbc:postgresql://localhost:%d/akiban", port);
-        Connection connection = DriverManager.getConnection(url, user, password);
-        connection.close();
+        String url = String.format("jdbc:postgresql://localhost:%d/%s", port, user);
+        return DriverManager.getConnection(url, user, password);
     }
 
     @Test(expected = SQLException.class)
     public void postgresUnauthenticated() throws Exception {
-        openPostgresConnection(null, null);
+        openPostgresConnection(null, null).close();
     }
 
     @Test
     public void postgresAuthenticated() throws Exception {
-        openPostgresConnection("user1", "password");
+        Connection conn = openPostgresConnection("user1", "password");
+        Statement stmt = conn.createStatement();
+        ResultSet rs = stmt.executeQuery("SELECT id FROM utable");
+        assertTrue(rs.next());
+        assertEquals(1, rs.getInt(1));
+        rs.close();
+        stmt.execute("DROP TABLE utable");
+        stmt.close();
+        conn.close();
     }
 
     @Test(expected = SQLException.class)
     public void postgresBadUser() throws Exception {
-        openPostgresConnection("user2", "whatever");
+        openPostgresConnection("user2", "whatever").close();
     }
 
     @Test(expected = SQLException.class)
     public void postgresBadPassword() throws Exception {
-        openPostgresConnection("user1", "nope");
+        openPostgresConnection("user1", "nope").close();
     }
 
 }
